syntax = "proto3";

package com.example.activity-service;

import "google/protobuf/timestamp.proto"; // For created_at field

service ActivityService {
  rpc CreateActivity(CreateActivityRequest) returns (CreateActivityResponse);

  rpc GetRecentActivities(GetRecentActivitiesRequest) returns (GetRecentActivitiesResponse);

  rpc GetUserActivities(GetUserActivitiesRequest) returns (GetUserActivitiesResponse);
}

message CreateActivityRequest {
  Long user_id = 1;
  string title = 2;
  string description = 3;
  // created_at is typically set by the server, but could be provided by client if needed for specific use cases
}

message CreateActivityResponse {
  int32 activity_id = 1; // ID of the newly created activity
  bool success = 2;
  string message = 3; // e.g., error message
}

// Message for retrieving recent activities
message GetRecentActivitiesRequest {
  Long limit = 1; // Number of activities to retrieve
}

// Message representing a single activity for client consumption
message ActivityItem {
  Long id = 1;
  Long user_id = 2;
  string title = 3;
  string description = 4;
  google.protobuf.Timestamp created_at = 5;
}

message GetRecentActivitiesResponse {
  repeated ActivityItem activities = 1;
}

// Optional: Messages for getting user-specific activities
message GetUserActivitiesRequest {
  Long user_id = 1;
  Long limit = 2; // Number of activities to retrieve for this user
}

message GetUserActivitiesResponse {
  repeated ActivityItem activities = 1;
}